# SituatedThinker

./: LICENSE  README.md
cache/data/textworld/: custom_game_0.json  custom_game_0.z8  custom_game_1.json  custom_game_1.z8  custom_game_10.json  custom_game_10.z8  custom_game_11.json  custom_game_11.z8  custom_game_12.json  custom_game_12.z8  custom_game_13.json  custom_game_13.z8  (+89 more)
scripts/: build_faiss_index.sh  build_grpo_data.sh  evaluate.sh  run_grpo_multinode.sh
scripts/deploy/: deploy_llm.sh  deploy_retrieval_interface.sh
src/: pyproject.toml  runtime.env  setup.py
src/data/: build_faiss_index.py  build_grpo_data.py  dataset_loader.py
src/evaluation/: 2wiki.py  aime24.py  aime25.py  bamboogle.py  base.py  gpqa.py  hotpotqa.py  math500.py  medqa.py  musique.py  textworld.py  webqsp.py  wtq.py
src/inference_engine/: vllm.py
src/interfaces/: __init__.py  base.py
src/interfaces/code/: interface.py  sandboxfusion_executor.py
src/interfaces/retrieval/: api.py  embedding_model.py  index_loader.py  interface.py
src/interfaces/textworld_game/: game.py  interface.py
src/interfaces/webqsp_freebase/: interface.py  knowledge_graph.py
src/interfaces/wtq_table/: interface.py  table.py
src/misc/: constant.py  system_prompt.py  utils.py
src/scorers/: __init__.py  math.py  question_answering.py
src/verl/: protocol.py
src/verl/single_controller/base/: decorator.py  worker.py
src/verl/single_controller/base/register_center/: ray.py
src/verl/single_controller/ray/: __init__.py  base.py
src/verl/trainer/: main_ppo.py
src/verl/trainer/config/: ppo_trainer.yaml
src/verl/trainer/ppo/: core_algos.py  metric_utils.py  ray_trainer.py  reward.py
src/verl/utils/dataset/: rl_dataset.py
src/verl/utils/reward_score/: __init__.py  situated_thinker.py
src/verl/workers/: fsdp_workers.py
src/verl/workers/actor/: dp_actor.py
src/verl/workers/reward_manager/: __init__.py  situated_thinker.py
src/verl/workers/rollout/: async_server.py
src/verl/workers/rollout/vllm_rollout/: __init__.py  async_situated_thinker_completion_scheduler.py  situated_thinker_vllm_rollout_spmd.py  vllm_async_server.py
